<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reunitex_background"
    tools:context=".CadastroActivity">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="201dp"
        android:layout_height="170dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user_cad" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_user_Id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_cadastro_user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_background"
            android:hint="@string/digite_usuario_cad"
            android:inputType="textPersonName"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="16dp"
            android:textColor="@android:color/white" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_email_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_user_Id">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_cadastro_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_background"
            android:hint="@string/digite_email_cad"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@android:color/white" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_cadastro_senha_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email_id">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_cadastro_senha_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_background"
            android:hint="@string/digite_senha_cad"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@android:color/white" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_cadastro_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_button"
        android:elevation="4dp"
        android:text="@string/cadastrar"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_cadastro_senha_id"
        app:layout_constraintVertical_bias="0.188" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_login_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="Já possui uma conta? Faça o seu login!"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cadastro_id"
        app:layout_constraintVertical_bias="0.076" />


</android.support.constraint.ConstraintLayout>